# gateway/internal/handlers/catalog_router.go
@@ -21,6 +21,7 @@ func (h *CatalogHandler) MountRoutes(r chi.Router, m *mw.MiddleWares) {
 		r.Post("/artists", h.AddArtist)
 
 		r.Get("/albums/{album_uuid}", h.GetAlbumByID)
+		r.Get("/albums/{album_uuid}/cover", h.GetAlbumCover)
 		r.Get("/albums/{album_uuid}/tracks", h.GetAlbumTracks)
 		r.Post("/albums", h.AddAlbum)
 		r.Post("/albums/{album_uuid}/tracks", h.AddTracksToAlbum)
